OldArchive/f03a55664a168d47745d5a946f11015b-7063104e283ed82d51a6fde7370c6e59/output
main.cpp:2:1: error: 'a' does not name a type
 a aa();
 ^
main.cpp:3:1: error: 'b' does not name a type
 b aa();
 ^
main.cpp:124:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:125:1: error: 'd' does not name a type
 d dd();
 ^
main.cpp:186:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:187:1: error: 'd' does not name a type
 d dd();
 ^
main.cpp:248:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:249:1: error: 'd' does not name a type
 d dd();
 ^
main.cpp:250:1: error: 'a' does not name a type
 a aa();
 ^
main.cpp:251:1: error: 'b' does not name a type
 b aa();
 ^
main.cpp:372:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:373:1: error: 'd' does not name a type
 d dd();
 ^
main.cpp:434:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:435:1: error: 'd' does not name a type
 d dd();
 ^
main.cpp:496:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:497:1: error: 'd' does not name a type
 d dd();
 ^
main.cpp:498:1: error: 'a' does not name a type
 a aa();
 ^
main.cpp:499:1: error: 'b' does not name a type
 b aa();
 ^
main.cpp:620:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:621:1: error: 'd' does not name a type
 d dd();
 ^
main.cpp:682:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:683:1: error: 'd' does not name a type
 d dd();
 ^
main.cpp:744:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:745:1: error: 'd' does not name a type
 d dd();
 ^
main.cpp:746:1: error: 'a' does not name a type
 a aa();
 ^
main.cpp:747:1: error: 'b' does not name a type
 b aa();
 ^
main.cpp:868:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:869:1: error: 'd' does not name a type
 d dd();
 ^
main.cpp:930:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:931:1: error: 'd' does not name a type
 d dd();
 ^
main.cpp:992:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:993:1: error: 'd' does not name a type
 d dd();
 ^
